@startuml

title Modelo Relacional - InflowMarket

hide methods
hide stereotypes
skinparam linetype ortho

entity "TENANT" as tenant {
    * id : UUID <<PK>>
    --
    nome : VARCHAR(150)
    documento : VARCHAR(30)
    telefone : VARCHAR(30)
    email : VARCHAR(150)
    endereco : TEXT
    logo : TEXT
    ativo : BOOLEAN
    data_criacao : TIMESTAMPTZ
}

entity "USUARIO" as usuario {
    * id : UUID <<PK>>
    --
    auth_user_id : UUID <<FK auth.users>>
    tenant_id : UUID <<FK>>
    nome : VARCHAR(150)
    email : VARCHAR(150)
    perfil : perfil_usuario
    ativo : BOOLEAN
    data_criacao : TIMESTAMPTZ
}

entity "CLIENTE" as cliente {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    nome : VARCHAR(150)
    cpf_cnpj : VARCHAR(30)
    telefone : VARCHAR(30)
    email : VARCHAR(150)
    endereco : TEXT
    tipo : tipo_cliente
    ativo : BOOLEAN
    data_criacao : TIMESTAMPTZ
}

entity "CONTA_CLIENTE" as conta_cliente {
    * id : UUID <<PK>>
    --
    cliente_id : UUID <<FK>>
    saldo_devedor : NUMERIC(15,2)
    data_criacao : TIMESTAMPTZ
    data_atualizacao : TIMESTAMPTZ
}

entity "PRODUTO" as produto {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    nome : VARCHAR(150)
    descricao : TEXT
    unidade : VARCHAR(30)
    quantidade_estoque : NUMERIC(15,3)
    ativo : BOOLEAN
    data_criacao : TIMESTAMPTZ
}

entity "FORNECEDOR" as fornecedor {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    nome : VARCHAR(150)
    documento : VARCHAR(30)
    telefone : VARCHAR(30)
    email : VARCHAR(150)
    endereco : TEXT
    ativo : BOOLEAN
    data_criacao : TIMESTAMPTZ
}

entity "ENTRADA_MERCADORIA" as entrada {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    fornecedor_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    data : TIMESTAMPTZ
    valor_total : NUMERIC(15,2)
    observacao : TEXT
    status : status_entrada
}

entity "ITEM_ENTRADA" as item_entrada {
    * id : UUID <<PK>>
    --
    entrada_id : UUID <<FK>>
    produto_id : UUID <<FK>>
    quantidade : NUMERIC(15,3)
    custo_unitario : NUMERIC(15,2)
    valor_total : NUMERIC(15,2)
}

entity "VENDA" as venda {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    cliente_id : UUID <<FK>>
    vendedor_id : UUID <<FK>>
    numero : BIGINT
    data_venda : TIMESTAMPTZ
    tipo_venda : tipo_venda
    forma_pagamento : forma_pagamento
    prazo_dias : INTEGER
    data_vencimento : DATE
    valor_total : NUMERIC(15,2)
    valor_pago : NUMERIC(15,2)
    saldo : NUMERIC(15,2)
    status : status_venda
    data_criacao : TIMESTAMPTZ
    data_atualizacao : TIMESTAMPTZ
}

entity "ITEM_VENDA" as item_venda {
    * id : UUID <<PK>>
    --
    venda_id : UUID <<FK>>
    produto_id : UUID <<FK>>
    quantidade : NUMERIC(15,3)
    preco_unitario : NUMERIC(15,2)
    valor_total : NUMERIC(15,2)
}

entity "ROMANEIO" as romaneio {
    * id : UUID <<PK>>
    --
    venda_id : UUID <<FK, UNIQUE>>
    numero : BIGINT
    data_geracao : TIMESTAMPTZ
}

entity "PAGAMENTO" as pagamento {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    cliente_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    valor : NUMERIC(15,2)
    forma_pagamento : forma_pagamento
    data : TIMESTAMPTZ
    observacao : TEXT
    status : status_pagamento
}

entity "PAGAMENTO_APLICACAO" as pagamento_aplicacao {
    * id : UUID <<PK>>
    --
    pagamento_id : UUID <<FK>>
    venda_id : UUID <<FK>>
    valor_aplicado : NUMERIC(15,2)
}

entity "DEVOLUCAO" as devolucao {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    venda_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    valor_total : NUMERIC(15,2)
    motivo : TEXT
    estorno_externo : BOOLEAN
    data : TIMESTAMPTZ
    status : status_devolucao
}

entity "ITEM_DEVOLUCAO" as item_devolucao {
    * id : UUID <<PK>>
    --
    devolucao_id : UUID <<FK>>
    item_venda_id : UUID <<FK>>
    produto_id : UUID <<FK>>
    quantidade : NUMERIC(15,3)
    valor_unitario : NUMERIC(15,2)
    valor_total : NUMERIC(15,2)
}

entity "COBRANCA" as cobranca {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    cliente_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    data : TIMESTAMPTZ
    forma_contato : forma_contato_cobranca
    status : status_cobranca
    valor_cobrado : NUMERIC(15,2)
    observacao : TEXT
    proxima_cobranca : DATE
}

entity "COBRANCA_VENDA" as cobranca_venda {
    * id : UUID <<PK>>
    --
    cobranca_id : UUID <<FK>>
    venda_id : UUID <<FK>>
}

entity "MOVIMENTACAO_ESTOQUE" as movimentacao_estoque {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    produto_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    item_entrada_id : UUID <<FK>>
    item_venda_id : UUID <<FK>>
    item_devolucao_id : UUID <<FK>>
    tipo : tipo_movimentacao_estoque
    quantidade : NUMERIC(15,3)
    saldo_anterior : NUMERIC(15,3)
    saldo_posterior : NUMERIC(15,3)
    data : TIMESTAMPTZ
}

entity "HISTORICO" as historico {
    * id : UUID <<PK>>
    --
    tenant_id : UUID <<FK>>
    usuario_id : UUID <<FK>>
    entidade : VARCHAR(100)
    entidade_id : UUID
    tipo_operacao : VARCHAR(100)
    descricao : TEXT
    valor_anterior : JSONB
    valor_novo : JSONB
    data_hora : TIMESTAMPTZ
}

tenant ||--o{ usuario : possui
tenant ||--o{ cliente : possui
tenant ||--o{ produto : possui
tenant ||--o{ fornecedor : possui
tenant ||--o{ entrada : possui
tenant ||--o{ venda : possui
tenant ||--o{ pagamento : possui
tenant ||--o{ devolucao : possui
tenant ||--o{ cobranca : possui
tenant ||--o{ movimentacao_estoque : possui
tenant ||--o{ historico : registra

usuario ||--o{ entrada : registra
usuario ||--o{ venda : realiza
usuario ||--o{ pagamento : registra
usuario ||--o{ devolucao : registra
usuario ||--o{ cobranca : realiza
usuario ||--o{ movimentacao_estoque : registra
usuario ||--o{ historico : gera

cliente ||--|| conta_cliente : possui
cliente ||--o{ venda : realiza
cliente ||--o{ pagamento : realiza
cliente ||--o{ cobranca : recebe

fornecedor ||--o{ entrada : fornece
entrada ||--|{ item_entrada : contem
produto ||--o{ item_entrada : recebido

venda ||--|{ item_venda : contem
produto ||--o{ item_venda : vendido
venda ||--|| romaneio : gera

pagamento ||--o{ pagamento_aplicacao : possui
venda ||--o{ pagamento_aplicacao : recebe

venda ||--o{ devolucao : possui
devolucao ||--|{ item_devolucao : contem
item_venda ||--o{ item_devolucao : devolvido
produto ||--o{ item_devolucao : retorna

cobranca ||--o{ cobranca_venda : relaciona
venda ||--o{ cobranca_venda : cobrada

produto ||--o{ movimentacao_estoque : movimenta
item_entrada ||--o{ movimentacao_estoque : origina
item_venda ||--o{ movimentacao_estoque : origina
item_devolucao ||--o{ movimentacao_estoque : origina

@enduml
